// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|NoData custom 1`] = `
.c0 {
  color: #FFF;
  text-align: center;
  padding: 50px 10px;
  font-weight: 200;
  font-size: 20px;
}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:480px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    No Projects
  </div>
</div>
`;

exports[`Storyshots Shared Components|NoData default 1`] = `
.c0 {
  color: #FFF;
  text-align: center;
  padding: 50px 10px;
  font-weight: 200;
  font-size: 20px;
}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:480px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    No Data Found.
  </div>
</div>
`;
